--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/Comment/Create.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/Comment/Create.cshtml
@@ -1,22 +1,30 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@model TablicaOgloszen.Models.Comment
+﻿@model TablicaOgloszen.Models.Comment
 
 <h1>Utwórz komentarz</h1>
 
- <div>
-        <span>
-            <a class="btn btn-primary" asp-action="Details" asp-controller="Post" asp-route-id="ViewContext.RouteData.Values["idPost"]">Powrót</a>
-        </span>
-    </div>
+<div>
+    <span>
+        <a asp-action="Details" asp-controller="Post" asp-route-id="@Model.Posts_Id" class="btn btn-primary">Powrót</a>
+    </span>
+</div>
 
-    <div asp-validation-summary="All"></div>
-<form class="form-control" method="post" asp-action="Create">
-    <label class="form-label" asp-for="Text"></label>
-    <input class="form-control" asp-for="Text" />
-    <span class="form-text" asp-validation-for="Text"></span>
-    <input class="btn btn-primary" type="submit" value="Create" />
+<form class="form form-control" method="post" asp-action="Create">
+    <div class="form-group">
+        <div asp-validation-summary="All" class="text-danger"></div>
+    </div>
+    <div class="form-group">
+        <label class="form-label" asp-for="Text"></label>
+        <input class="form-control" asp-for="Text" />
+        <span class="form-text" asp-validation-for="Text"></span>
+    </div>
+    <div class="form-group">
+        <label hidden class="form-label" asp-for="Posts_Id"></label>
+        <input hidden class="form-control" asp-for="Posts_Id" />
+        <span hidden class="form-text" asp-validation-for="Posts_Id"></span>
+    </div>
+    <div class="form-group">
+        <input class="btn btn-primary" type="submit" value="Create" />
+    </div>
 </form>
 
 @section Scripts{
