--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Index.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Index.cshtml
@@ -8,94 +8,89 @@
     </div>
     @foreach (var item in Model)
     {
-        {
-            <div class="container mt-5 mb-5">
-                <div class="row d-flex align-items-center justify-content-center">
-                    <div class="col-md-10">
-                        <div class="card">
-                            <div class="d-flex justify-content-between p-2 px-3">
-                                <div class="d-flex flex-row align-items-center">
-                                    <img src="https://i.imgur.com/tdi3NGa.png" width="50" class="rounded-circle">
-                                    <div class="d-flex flex-column m-2">
-                                        <span class="font-weight-bold" style="font-size:120%;">
-                                            <b><a class="text-decoration-none text-black" asp-controller="User" asp-action="Details" asp-route-id="@item.Owner.Id">@item.Owner.UserName</a></b>
-                                        </span>
-                                        <small class="text-primary">
-                                            <a asp-action="Details" asp-route-id="@item.post.Id">
-                                                @item.post.Title
-                                            </a>
-                                        </small>
-                                    </div>
+        string text = "";
+        @if (item.post.Deleted == true) { text = "border:solid 3px red"; } else { text = ""; }
+        <div class="container mt-5 mb-5">
+            <div class="row d-flex align-items-center justify-content-center">
+                <div class="col-md-10">
+                    <div class="card" style="@text">
+                        <div class="d-flex justify-content-between p-2 px-3">
+                            <div class="d-flex flex-row align-items-center">
+                                <img src="https://i.imgur.com/tdi3NGa.png" width="50" class="rounded-circle">
+                                <div class="d-flex flex-column m-2">
+                                    <span class="font-weight-bold" style="font-size:120%;">
+                                        <b><a class="text-decoration-none text-black" asp-controller="User" asp-action="Details" asp-route-id="@item.Owner.Id">@item.Owner.UserName</a></b>
+                                    </span>
+                                    <small class="text-primary">
+                                        <a asp-action="Details" asp-route-id="@item.post.Id">
+                                            @item.post.Title
+                                        </a>
+                                    </small>
                                 </div>
-                                <div class="d-flex flex-row ellipsis">
-                                    <div class="d-flex flex-column justify-content-start align-items-center">
-                                        <ul class="ratings d-flex flex-row justify-content-start align-items-center" style="list-style:none;margin:0;padding:0;">
-                                            <li><i class="bi bi-star"></i></li>
-                                            <li><i class="bi bi-star"></i></li>
-                                            <li><i class="bi bi-star"></i></li>
-                                            <li><i class="bi bi-star"></i></li>
-                                            <li><i class="bi bi-star"></i></li>
-                                        </ul>
-                                        <div class="review-count">średnia: @item.post.Rating</div>
-                                    </div>
-                                    @*<i class="bi bi-three-dots-vertical" style="margin-right:5px;"></i>*@
-                                    @inject TablicaOgloszen.Services.MyPermissionsManagerService per
-                                    @{
-                                        await per.getPermissions(User);
-                                        if (per.permissions.Level >= PermissionsRole.Moderator)
+                            </div>
+                            <div class="d-flex flex-row ellipsis">
+                                @inject TablicaOgloszen.Services.MyPermissionsManagerService per
+                                @{
+                                    await per.getPermissions(User);
+                                    if (per.permissions.Level >= PermissionsRole.Moderator)
+                                    {
+                                        @if (item.post.Pinned)
                                         {
-                                            @if (item.post.Pinned)
-                                            {
-                                                <i class="bi bi-pin-fill"></i>}
-                                            else
-                                            {
+                                            <a asp-action="PinTogggle" asp-route-Id="@item.post.Id">
+                                                <i class="bi bi-pin-fill"></i>
+                                            </a>
+                                        }
+                                        else
+                                        {
+                                            <a asp-action="PinTogggle" asp-route-Id="@item.post.Id">
                                                 <i class="bi bi-pin"></i>
-                                            }
+                                            </a>
                                         }
                                     }
-                                </div>
+                                }
                             </div>
-                            <div class="p-2">
-                                <p class="text-justify">
-                                    @item.post.Text
-                                </p>
-                                <hr>
-                                <div class="d-flex justify-content-between align-items-center muted-color">
-                                    <div class="d-flex flex-row"> <span>Data dodania: @TablicaOgloszen.Services.DateConventerService.DateConvert(item.post.Date)</span> </div>
-                                    @*<div class="d-flex flex-row"> <span>Ilość komentarzy: item.Comments.ToList().Count()</span> </div>*@
-                                </div>
-                                <hr>
-                                <div class="comments">
-                                    Najnowsze Komentarze:
-                                    @foreach (var comment in item.Comments)
-                                    {
-                                        <div class="d-flex flex-row mb-2">
-                                            <div class="ml-2">
-                                                @*<a class="text-decoration-none text-black" asp-controller="User" asp-action="Details" asp-route-id="@comment.Users_Id"><span class="name">@comment.Users_Id</span></a>
-                                                    <span class="comment-text"> - @comment.Date </span>*@
-                                                <span class="comment-text"> - @comment.Text </span>
-                                            </div>
+                        </div>
+                        <div class="p-2">
+                            <p class="text-justify">
+                                @item.post.Text
+                            </p>
+                            <hr>
+                            <div class="d-flex justify-content-between align-items-center muted-color">
+                                <div class="d-flex flex-row"> <span>Data dodania: @TablicaOgloszen.Services.DateConventerService.DateConvert(item.post.Date)</span> </div>
+                                @*<div class="d-flex flex-row"> <span>Ilość komentarzy: item.Comments.ToList().Count()</span> </div>*@
+                            </div>
+                            <hr>
+                            <div class="comments">
+                                Najnowsze Komentarze:
+                                @foreach (var comment in item.Comments)
+                                {
+                                    <div class="d-flex flex-row mb-2">
+                                        <div class="ml-2">
+                                            @*<a class="text-decoration-none text-black" asp-controller="User" asp-action="Details" asp-route-id="@comment.Users_Id"><span class="name">@comment.Users_Id</span></a>
+                                                <span class="comment-text"> - @comment.Date </span>*@
+                                            <span class="comment-text"> - @comment.Text </span>
                                         </div>
-                                    }
-                                </div>
-                                @*<hr>
-                                    <div class="container-fluid p-0">
-                                        <span>Options:</span>
-                                        <span>
-                                            <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id">Edytuj Ogłoszenie</a>
-                                        </span>
-                                        <span>
-                                            <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Usuń Ogłoszenie</a>
-                                        </span>
-                                        <span>
-                                            <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Usuń Ogłoszenie jako moderator</a>
-                                        </span>
-                                    </div>*@
+                                    </div>
+                                }
                             </div>
+                            @*<hr>
+                                <div class="container-fluid p-0">
+                                    <span>Options:</span>
+                                    <span>
+                                        <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.Id">Edytuj Ogłoszenie</a>
+                                    </span>
+                                    <span>
+                                        <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Usuń Ogłoszenie</a>
+                                    </span>
+                                    <span>
+                                        <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.Id">Usuń Ogłoszenie jako moderator</a>
+                                    </span>
+                                </div>*@
                         </div>
                     </div>
                 </div>
             </div>
-        }
+        </div>
+
     }
 }
