--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Edit.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Edit.cshtml
@@ -2,25 +2,32 @@
 
 <h1>Edytuj ogłoszenie</h1>
 
-<div>
-    <span>
-        <a class="btn btn-primary" asp-action="Details" asp-controller="Post" asp-route-id="@Model.Id">Powrót</a>
-    </span>
-</div>
+@if (Model != null)
+{
+    <div>
+        <span>
+            <a class="btn btn-primary" asp-action="Details" asp-controller="Post" asp-route-id="@Model.Id">Powrót</a>
+        </span>
+    </div>
+}
 
 <form class="form-control" method="post" asp-action="Edit">
-    <div asp-validation-summary="All"></div>
-    <div class="mb-3">
+    <div class="form-group mb-3">
+        <div asp-validation-summary="All"></div>
+    </div>
+    <div class="form-group mb-3">
         <label class="form-label" asp-for="Title"></label>
         <input class="form-control" asp-for="Title" />
         <span class="form-text" asp-validation-for="Title"></span>
     </div>
-    <div class="mb-3">
+    <div class="form-group mb-3">
         <label class="form-label" asp-for="Text"></label>
         <textarea class="form-control" asp-for="Text"></textarea>
         <span class="form-text" asp-validation-for="Text"></span>
     </div>
-    <input class="btn btn-primary" type="submit" value="Edit" />
+    <div class="form-group mb-3">
+        <input class="btn btn-primary" type="submit" value="Edit" />
+    </div>
 </form>
 
 @section Scripts{
