--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Details.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Details.cshtml
@@ -56,9 +56,11 @@
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="d-flex flex-row"> <span>Data dodania: @TablicaOgloszen.Services.DateConventerService.DateConvert(Model.Post.Date)</span> </div>
                             <div class="d-flex flex-row"> <span>Ilość komentarzy: @Model.CommentsCount</span> </div>
+                        </div>
+                        <div class="d-flex flex-row">
                             @if (Model.Post.Deleted == true)
                             {
-                                <div class="d-flex flex-row"> <span>Usunięty przez: @Model.Post.ModedBy</span> </div>
+                                <span>Usunięty przez: <a asp-controller="User" asp-action="Details" asp-route-Id="@Model.Post.ModedBy">@Model.Post.ModedBy</a></span>
                             }
                         </div>
                         <hr>
@@ -112,6 +114,12 @@
                                 {
                                     <span>
                                         <a asp-action="Delete" asp-route-id="@Model.Post.Id" class="btn btn-danger">Usuń jako moderator</a>
+                                    </span>
+                                }
+                                if (per.permissions.Level >= PermissionsRole.Administrator)
+                                {
+                                    <span>
+                                        <a asp-controller="Post" asp-action="Tags" asp-route-id="@Model.Post.Id" class="btn btn-primary">zarządzaj Tagami</a>
                                     </span>
                                 }
                                 <span>
