--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/User/Index.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/User/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model List<TablicaOgloszen.Models.User>
+@inject TablicaOgloszen.Services.MyPermissionsManagerService per
 
 <h1> Użytkownicy </h1>
 @if (Model != null)
@@ -8,36 +9,50 @@
         {
             <div class="col">
                 <div class="card h-100">
-                    <a asp-action="Details" asp-route-id="@item.Id"><h5 class="card-header">@item.UserName</h5></a>
+                    <a class="text-dark text-decoration-none" asp-action="Details" asp-route-id="@item.Id"><h5 class="card-header">@item.UserName</h5></a>
                     <div class="card-body">
-                        <p class="card-title">Id: @item.Id</p>
-                        <p class="card-text">Name: @item.UserName</p>
+                        <p class="card-text">Id: @item.Id</p>
+                        <p class="card-text">Nazwa: @item.UserName</p>
                         <p class="card-text">Email: @item.Email</p>
-                        <p class="card-text">Phone number: @item.PhoneNumber</p>
+                        <p class="card-text">Numer telefonu: @item.PhoneNumber</p>
                         <p class="card-text">
-                            Roles:
-
+                            Level:
+                            @{
+                                var level = await per.findPermissions(item);
+                                @(level)
+                            }
                         </p>
-                        <p class="card-text">Ban: @item.Ban</p>
-                        <p class="card-text">Moded By: @item.ModedBy</p>
+                        <p class="card-text">Zablokowany: @item.Ban</p>
+                        <p class="card-text">Zmieniony przez: <a asp-action="Details" asp-route-id="@item.ModedBy">@item.ModedBy</a></p>
                     </div>
                     <div class="card-footer">
-                        <span>
-                            <a asp-action="Ban" asp-route-name="@item.UserName" class="btn btn-danger">Zablokuj</a>
-                        </span>
-                        <span>
-                            <a asp-action="Unban" asp-route-name="@item.UserName" class="btn btn-warning">Odblokuj</a>
-                        </span>
-
-                        <span>
-                            <a asp-action="Edit" asp-route-Id="@item.Id" class="btn btn-warning">Edytuj</a>
-                        </span>
-                        <span>
-                            <a asp-action="ModGrant" asp-route-name="@item.UserName" class="btn btn-primary">Grant Moderator</a>
-                        </span>
-                        <span>
-                            <a asp-action="ModRevoke" asp-route-name="@item.UserName" class="btn btn-secondary">Revoke Moderator</a>
-                        </span>
+                        @{
+                            await per.getPermissions(User);
+                            if (per.permissions.Level >= PermissionsRole.Moderator && level != PermissionsRole.Administrator)
+                            {
+                                <span>
+                                    <a asp-action="Ban" asp-route-Id="@item.Id" class="btn btn-danger">Zablokuj</a>
+                                </span>
+                                <span>
+                                    <a asp-action="Unban" asp-route-Id="@item.Id" class="btn btn-warning">Odblokuj</a>
+                                </span>
+                            }
+                            if (per.permissions.Level >= PermissionsRole.Administrator)
+                            {
+                                <span>
+                                    <a asp-action="Edit" asp-route-Id="@item.Id" class="btn btn-warning">Edytuj</a>
+                                </span>
+                                if (level != PermissionsRole.Administrator)
+                                {
+                                    <span>
+                                        <a asp-action="ModGrant" asp-route-Id="@item.Id" class="btn btn-primary">Grant Moderator</a>
+                                    </span>
+                                    <span>
+                                        <a asp-action="ModRevoke" asp-route-Id="@item.Id" class="btn btn-secondary">Revoke Moderator</a>
+                                    </span>
+                                }
+                            }
+                        }
                     </div>
                 </div>
             </div>
