--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/Comment/Create.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/Comment/Create.cshtml
@@ -8,21 +8,21 @@
     </span>
 </div>
 
-<form class="form form-control" method="post" asp-action="Create">
-    <div class="form-group">
+<form class="form-control" method="post" asp-action="Create">
+    <div class="form-group mb-3">
         <div asp-validation-summary="All" class="text-danger"></div>
     </div>
-    <div class="form-group">
+    <div class="form-group mb-3">
         <label class="form-label" asp-for="Text"></label>
         <input class="form-control" asp-for="Text" />
         <span class="form-text" asp-validation-for="Text"></span>
     </div>
-    <div class="form-group">
+    <div class="form-group mb-3">
         <label hidden class="form-label" asp-for="Posts_Id"></label>
         <input hidden class="form-control" asp-for="Posts_Id" />
         <span hidden class="form-text" asp-validation-for="Posts_Id"></span>
     </div>
-    <div class="form-group">
+    <div class="form-group mb-3">
         <input class="btn btn-primary" type="submit" value="Create" />
     </div>
 </form>
