--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/Comment/Delete.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/Comment/Delete.cshtml
@@ -1,23 +1,28 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@model TablicaOgloszen.Models.Comment
-@{
-}
+﻿@model TablicaOgloszen.Models.Comment
 
 <h1>Usuń Komentarz</h1>
-<div>
-    <span>
-        <a class="btn btn-primary" asp-controller="Comment" asp-action="Index" asp-route-id="ViewContext.HttpContext.Request.Query["IdPost"]">Powrót</a>
-    </span>
-</div>
-<div asp-validation-summary="All"></div>
-<form class="form-control" method="post" asp-action="Delete">
-    <label class="form-label" asp-for="Text"></label>
-    <input class="form-control" asp-for="Text" disabled />
-    <span class="form-text" asp-validation-for="Text"></span>
-    <input class="btn btn-primary" type="submit" value="Delete" />
-</form>
+@if (Model != null)
+{
+    <div>
+        <span>
+            <a class="btn btn-primary" asp-controller="Comment" asp-action="Index" asp-route-id="@Model.Posts_Id">Powrót</a>
+        </span>
+    </div>
+
+    <form class="form-control" method="post" asp-action="Delete">
+        <div class="form-group mb-3">
+            <div asp-validation-summary="All"></div>
+        </div>
+        <div class="form-group mb-3">
+            <label class="form-label" asp-for="Text"></label>
+            <input class="form-control" asp-for="Text" disabled />
+            <span class="form-text" asp-validation-for="Text"></span>
+        </div>
+        <div class="form-group mb-3">
+            <input class="btn btn-primary" type="submit" value="Delete" />
+        </div>
+    </form>
+}
 
 @section Scripts{
     @{
