--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/Comment/Index.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/Comment/Index.cshtml
@@ -13,6 +13,17 @@
             <a asp-controller="Comment" asp-action="Create" asp-route-id="@Model.post.Id" class="btn btn-primary">Dodaj komentarz</a>
         </span>
     </div>
+     <form class="form-control" method="get" asp-action="Index">
+    <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Sortuj wedlug</label>
+        <select name="sort"  class="form-control">
+            <option value="datedesc">Data od najnowszego do najstarszego</option>
+            <option value="dateasc">Data od najstarszego do najnowszego</option>
+        </select>
+        </div>
+    <button type="submit" class="btn btn-primary">Sortuj</button>
+    </form>
+    <br/>
     @foreach (var comment in Model.comments)
     {
         string text = "";
