--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Details.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Details.cshtml
@@ -15,13 +15,13 @@
                             <div class="d-flex flex-column m-2">
                                 <span class="font-weight-bold">
                                     <b>
-                                        <a class="text-decoration-none text-black" asp-controller="User" asp-action="Details" asp-route-id="@Model.Owner.Id">@Model.Owner.UserName</a>
+                                        <a class="text-decoration-none text-black">
+                                        @Model.Post.Title
+                                        </a>
                                     </b>
                                 </span>
                                 <small class="text-primary">
-                                    <a asp-action="Details" asp-route-id="@Model.Post.Id">
-                                        @Model.Post.Title
-                                    </a>
+                                  By: <a asp-controller="User" asp-action="Details" asp-route-id="@Model.Owner.Id">@Model.Owner.UserName</a>
                                 </small>
                             </div>
                         </div>
@@ -68,7 +68,7 @@
                             Tags:
                             @foreach (var tag in Model.Tags)
                             {
-                                <small class="comment-text">#@tag.Text</small>@(" ")
+                                <a href="/Post/?tag=@tag.Text">#@tag.Text</a>@(" ")
                             }
                         </div>
                         <hr>
