--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Index.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/Post/Index.cshtml
@@ -9,6 +9,8 @@
 
     <form class="form-control" method="get" asp-action="Index">
         <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Filtruj według zawartości:</label>
+            <input type="text" class="form-control" id="exampleInputEmail1" name="txt">
             <label for="exampleInputEmail1" class="form-label">Filtruj według tagu:</label>
             <input type="text" class="form-control" id="exampleInputEmail1" name="tag">
             <label for="exampleInputEmail1" class="form-label">Filtruj według autora:</label>
