--- a/Project/TablicaOgloszen/TablicaOgloszen/Views/Shared/_LoginPartial.cshtml
+++ b/Project/TablicaOgloszen/TablicaOgloszen/Views/Shared/_LoginPartial.cshtml
@@ -18,6 +18,15 @@
     }
     else
     {
+       <li class="nav-item">
+             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"><i class="bi bi-house"></i> Home</a>
+       </li>
+       <li class="nav-item">
+             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy"><i class="bi bi-shield"></i> Privacy</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" asp-area="" asp-controller="Post" asp-action="Index"><i class="bi bi-card-text"></i> Ogłoszenia</a>
+        </li>
         <li class="nav-item">
             <a class="nav-link" asp-area="Identity" asp-page="/Account/Register"> <i class="bi bi-person-plus"></i> Zarejestruj się</a>
         </li>
